# ml-kem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mlkem.py  mlkem_test.py
include/: util.h
src/: main.c  util.c  util.h
tests/: CMakeLists.txt  ml_kem_test.c  ml_kem_test.h  util_test.c
